--- a/main.html
+++ b/main.html
@@ -36,7 +36,7 @@
 
   <div class="converter">
     <button class="btn btn-warning mt-3" style="float: right" onclick="clearAll()">초기화</button><br /><br />
-    <label>위안화 (CNY):</label>
+    <label>위안화 (CNY, SCNY):</label>
     <input id="cny" type="number" class="form-control" placeholder="위안화 입력..." oninput="convertFrom('CNY')">
 
     <label>pSXP:</label>
