--- a/main.html
+++ b/main.html
@@ -179,8 +179,8 @@
     rates.KRW.USD = 1 / baseRates.KRW;
     rates.CNY.USD = 1 / baseRates.CNY;
     rates.JPY.USD = 1 / baseRates.JPY;
-    rates.pSXP.USD = baseRates.pSXP;
-    rates.Helidoge.USD = baseRates.Helidoge;
+    rates.pSXP.USD = 1 / baseRates.pSXP;
+    rates.Helidoge.USD = 1 / baseRates.Helidoge;
 
     // KRW 기준 추가
     rates.KRW.CNY = baseRates.CNY / (baseRates.KRW / USD);
