--- a/main.html
+++ b/main.html
@@ -3,18 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>SUIXI 계산기</title>
+  <title>1box 환율 계산기</title>
   <!-- Latest compiled and minified CSS -->
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
-
-<!-- jQuery library -->
-<script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.slim.min.js"></script>
-
-<!-- Popper JS -->
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
-
-<!-- Latest compiled JavaScript -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
+  <!-- jQuery library -->
+  <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.slim.min.js"></script>
+  <!-- Popper JS -->
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+  <!-- Latest compiled JavaScript -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
 <style>
   body {
     max-width: 550px;
@@ -33,10 +30,16 @@
   .modal_text {
     color: black;
   }
+
+  .onebox_image {
+    width: 100%;
+  }
 </style>
 </head>
 <body>
   <h1 class="text-center">1box 환율 계산기</h1>
+
+  <img class="onebox_image" src="assets/images/1box_image7.jpg" />
 
   <div class="converter">
     <div>
@@ -62,10 +65,11 @@
     <input id="psxp" type="number" class="form-control" placeholder="pSXP 입력..." oninput="convertFrom('pSXP')">
 
     <label>Helidoge:</label>
-    <input id="helidoge" type="number" class="form-control" placeholder="Helidoge 입력..." oninput="convertFrom('Helidoge')">
+    <input id="helidoge" type="number" class="form-control" placeholder="Helidoge 입력..." oninput="convertFrom('Helidoge')"><br /><br />
 
-    
-
+    <h5 class="text-center">1box 링크 연결</h5>
+    <a class="text-center" href="https://1box.kr/link/?intro=love&isstore=XSKTNZ61xmD1PuaKALP53A">https://1box.kr/link/?intro=love&isstore=XSKTNZ61xmD1PuaKALP53A</a><br /><br />
+    <img class="onebox_image" src="assets/images/1box_image5.jpg" /><br /><br />
     <div class="rate-info">
       <h3 class="text-center mt-5">사용자 적용 1달러 기준 환율:</h3>
       <ul>
@@ -75,7 +79,7 @@
         <li id="current_saved_psxp"></li>
         <li id="current_saved_helidoge"></li>
       </ul>
-    </div>
+    </div><br /><br />
 
     <div class="rate-info">
       <h3 class="text-center mt-5">처음 출시 기준 환율:</h3>
@@ -86,7 +90,11 @@
         <li>1 USD = ₩1500 = ¥7.5</li>
         <li>1 JPY = ₩10 = $0.0067</li>
       </ul>
-    </div>
+    </div><br /><br />
+
+    <img class="onebox_image" src="assets/images/1box_image2.jpg" />
+
+    <div style="width: 100%; height: 200px;"></div>
   </div>
 
   <!-- The Modal -->
