fix: 비율 크기 조정

--- a/main.html
+++ b/main.html
@@ -69,7 +69,10 @@
 
     <h5 class="text-center">1box 링크 연결</h5>
     <a class="text-center" href="https://1box.kr/link/?intro=love&isstore=XSKTNZ61xmD1PuaKALP53A">https://1box.kr/link/?intro=love&isstore=XSKTNZ61xmD1PuaKALP53A</a><br /><br />
-    <img class="onebox_image" src="assets/images/1box_image5.jpg" /><br /><br />
+    <div style="display: flex;">
+      <img style="width: 70%;" src="assets/images/1box_image7.jpg" />
+      <img style="width: 30%;" src="assets/images/1box_qr.jpg" />
+    </div>
     <div class="rate-info">
       <h3 class="text-center mt-5">사용자 적용 1달러 기준 환율:</h3>
       <ul>
@@ -79,7 +82,7 @@
         <li id="current_saved_psxp"></li>
         <li id="current_saved_helidoge"></li>
       </ul>
-    </div><br /><br />
+    </div>
 
     <div class="rate-info">
       <h3 class="text-center mt-5">처음 출시 기준 환율:</h3>
@@ -90,7 +93,7 @@
         <li>1 USD = ₩1500 = ¥7.5</li>
         <li>1 JPY = ₩10 = $0.0067</li>
       </ul>
-    </div><br /><br />
+    </div><br />
 
     <img class="onebox_image" src="assets/images/1box_image2.jpg" />
 
